# jakana

./: README.md  pyproject.toml
.config/jakana/exercise/: #example.yml#  .#example.yml
.jakana/exercises/: date-time.yml
.jakana/mistakes/: 2025-06-14.yml
config/.jakana/exercises/default/: date-time.yml
config/.jakana/mistakes/: 2025-06-08.yml
src/jakana/: #main.py#  .#main.py  main.py
